Defined each equation as a rule

--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -46,23 +46,17 @@ where the mapping is indicated by small numerals.
 \vlinf{\med}{}{\vls([\alpha.\gamma].[\beta.\delta])}
               {\vls[(\alpha.\beta).(\gamma.\delta)]}  \quad,      \\
 \noalign{\smallskip}
-\vlinf{\coor}{}{\vls[\beta.\alpha]}{\vls[\alpha.\beta]}\quad,&\qquad
-\vlinf{\coand}{}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,      \\
-\noalign{\smallskip}
-\vlinf{\asor}{}{\vls[\alpha.[\beta.\gamma]]}
-         {\vls[[\alpha.\beta].\gamma]}                \quad,&\qquad
+\vlinf{\coor}{}{\vls[\beta.\alpha]}{\vls[\alpha.\beta]}\quad,\qquad
+\vlinf{\coand}{}{\vls(\beta.\alpha)}{\vls(\alpha.\beta)}\quad,&\qquad
 \vlinf{\asor}{}{\vls[[\alpha.\beta].\gamma]}
-         {\vls[\alpha.[\beta.\gamma]]}                \quad,      \\
-\noalign{\smallskip}
-\vlinf{\asand}{}{\vls(\alpha.(\beta.\gamma))}
-         {\vls((\alpha.\beta).\gamma)}                \quad,&\qquad
+         {\vls[\alpha.[\beta.\gamma]]}                \quad,\qquad
 \vlinf{\asand}{}{\vls((\alpha.\beta).\gamma)}
          {\vls(\alpha.(\beta.\gamma))}                \quad,      \\
 \noalign{\smallskip}
-\vlinf{\unor}{}{\alpha}{\vls[\alpha.\fff]}           \quad,\qquad
-\vlinf{\unor}{}{\vls[\alpha.\fff]}{\alpha}           \quad,&\qquad
-\vlinf{\unand}{}{\alpha}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
-\vlinf{\unand}{}{\vls(\alpha.\ttt)}{\alpha}
+\vlinf{\fffd}{}{\vls[\alpha.\fff]}{\alpha}           \quad,\qquad
+\vlinf{\tttd}{}{\vls(\alpha.\ttt)}{\alpha}           \quad,&\qquad
+\vlinf{\fffu}{}{\alpha}{\vls(\alpha.\ttt)}        \qquad\hbox{and\/}\qquad
+\vlinf{\tttu}{}{\alpha}{\vls[\alpha.\fff]}
 \end{array}
 \]
 all the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the premiss are respectively mapped to the same edges of $\phi$ as the atom occurrences in $\alpha$, $\beta$, $\gamma$ and $\delta$ in the conclusion.
