--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -176,49 +176,111 @@ we write $\vlinf{\supers}{}{\vls[\zeta\{\fff\}.\xi\{\alpha\}]}{\vls(\zeta\{\alph
 \end{remark}
 
 \begin{lemma}\label{lemma:GenericContraction}
-Given a formula $\alpha$ and a positive integer $n$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$.
+Given a formula $\alpha$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\vls(\alpha.\alpha)}{\alpha}}$.
 \end{lemma}
 
 \begin{proof}
-We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on $n$. The first base case, $n=1$, is trivial and for the second base case, $n=2$, we argue by induction on the number of atom occurrences in $\alpha$. We have to consider the following base case and two inductive cases:
+We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atom occurrences in $\alpha$. We have to consider the following base case and two inductive cases:
 \[
-\vlinf{\acd}{}{a}{\vls[a.a]}
+\vlinf{}{}{a}{\vls[a.a]}
 \qquad\hbox{,}\qquad
-\vlderivation
+\vlinf{\med}{}
 {
- \vlin{=}{}{\vls(\alpha.\beta)}
- {
-  \vlin{\med}{}{\vlsbr(\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]})}
+ \vls
+ (
+  \vlder{}{\{\acd,\med\}}
   {
-   \vlhy{\vls[(\alpha.\beta).(\alpha.\beta)]}
+   \alpha
   }
- }
-}\qquad\hbox{and}\qquad
-\vlderivation
+  {
+   \vls[\alpha.\alpha]
+  }
+ \;\;.\;\;
+  \vlder{}{\{\acd,\med\}}
+  {
+   \beta
+  }
+  {
+   \vls[\beta.\beta]
+  }
+ )
+}
 {
- \vlin{=}{}{\vls[\alpha.\beta]}
- {
-  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]}]}
-  {
-   \vlhy{\vls[[\alpha.\beta].[\alpha.\beta]]}
-  }
- }
-}\quad.
-\]
-Finally, we show the inductive case, $n>2$:
-\[
-\vlderivation
+ \vls[(\alpha.\beta).(\alpha.\beta)]
+}
+\qquad\hbox{and}\qquad
+\vlinf{=}{}
 {
- \vlde{}{\{\acd,\med\}}{\alpha}
- {
-  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n-\lfloor n/2\rfloor}\alpha}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{\lfloor n/2\rfloor}\alpha}]}
+ \vls
+ [
+  \vlder{}{\{\acd,\med\}}
   {
-   \vlhy{\bigvee_{i=1}^{n}\alpha}
+   \alpha
   }
- }
-}\quad.
+  {
+   \vls[\alpha.\alpha]
+  }
+ \;\;.\;\;
+  \vlder{}{\{\acd,\med\}}
+  {
+   \beta
+  }
+  {
+   \vls[\beta.\beta]
+  }
+ ]
+}
+{
+ \vls[[\alpha.\beta].[\alpha.\beta]]
+}
+\quad.
 \]
 \end{proof}
+
+%\begin{lemma}\label{lemma:RepeatedGenericContraction}
+%Given a formula $\alpha$ and a positive integer $n$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$.
+%\end{lemma}
+
+%\begin{proof}
+%We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on $n$. The first base case, $n=1$, is trivial and for the second base case, $n=2$, we argue by induction on the number of atom occurrences in $\alpha$. We have to consider the following base case and two inductive cases:
+%\[
+%\vlinf{\acd}{}{a}{\vls[a.a]}
+%\qquad\hbox{,}\qquad
+%\vlderivation
+%{
+% \vlin{=}{}{\vls(\alpha.\beta)}
+% {
+%  \vlin{\med}{}{\vlsbr(\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]})}
+%  {
+%   \vlhy{\vls[(\alpha.\beta).(\alpha.\beta)]}
+%  }
+% }
+%}\qquad\hbox{and}\qquad
+%\vlderivation
+%{
+% \vlin{=}{}{\vls[\alpha.\beta]}
+% {
+%  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\beta}{\vls[\beta.\beta]}]}
+%  {
+%   \vlhy{\vls[[\alpha.\beta].[\alpha.\beta]]}
+%  }
+% }
+%}\quad.
+%\]
+%Finally, we show the inductive case, $n>2$:
+%\[
+%\vlderivation
+%{
+% \vlde{}{\{\acd,\med\}}{\alpha}
+% {
+%  \vlin{=}{}{\vlsbr[\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n-\lfloor n/2\rfloor}\alpha}\;\;.\;\;\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{\lfloor n/2\rfloor}\alpha}]}
+%  {
+%   \vlhy{\bigvee_{i=1}^{n}\alpha}
+%  }
+% }
+%}\quad.
+%\]
+%\end{proof}
 
 \newcommand{\contr}{\mathsf{c}}
 \newcommand{\cod}{{\contr{\downarrow}}}
@@ -227,7 +289,7 @@ Finally, we show the inductive case, $n>2$:
 \TODO{Define $\star$ notation}
 
 \begin{remark}\label{remark:GenericContraction}
-In the non-atomic version of system $\SKS$ the derivations shown in Lemma~\vref{lemma:GenericContraction} correspond to repeated applications of (co)contractions. For this reason we sometimes write the inference rules $\vlinf{n\cdot\cod}{}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlinf{n\cdot\cou}{}{\bigwedge_{i=1}^{n}\alpha}{\alpha}$ instead of the derivations $\vlder{}{\{\acd,\med\}}{\alpha}{\bigvee_{i=1}^{n}\alpha}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\bigwedge_{i=1}^{n}\alpha}{\alpha}}$, respectively.
+In the non-atomic version of system $\SKS$ the derivations shown in Lemma~\vref{lemma:GenericContraction} correspond to (co)contractions. For this reason we sometimes write the inference rules $\vlinf{\cod}{}{\alpha}{\vls[\alpha.\alpha]}$ and $\vlinf{\cou}{}{\vls(\alpha.\alpha)}{\alpha}$ instead of the derivations $\vlder{}{\{\acd,\med\}}{\alpha}{\vls[\alpha.\alpha]}$ and $\vlupsmash{\vlder{}{\{\acu,\med\}}{\vls(\alpha.\alpha)}{\alpha}}$, respectively.
 \end{remark}
 
 \begin{theorem}\label{theorem:SKSComplete}
