Fixed rule names

--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -25,17 +25,15 @@ Negation is only defined for atoms, which is not a limitation thanks to De Morga
 \newcommand{\asand}{=_{\wedge\mathsf{a}}}
 \newcommand{\coor }{=_{\vee\mathsf{c}}}
 \newcommand{\coand}{=_{\wedge\mathsf{c}}}
-\newcommand{\fffd }{=_{\fff}{\downarrow}}
-\newcommand{\fffu }{=_{\fff}{\uparrow}}
-\newcommand{\tttd }{=_{\ttt}{\downarrow}}
-\newcommand{\tttu }{=_{\ttt}{\uparrow}}
-\newcommand{\tttord }{=_{\ttt\vee}{\downarrow}}
-\newcommand{\fffandd }{=_{\fff\wedge}{\downarrow}}
-\newcommand{\tttoru }{=_{\ttt\vee}{\uparrow}}
-\newcommand{\fffandu }{=_{\fff\wedge}{\uparrow}}
+\newcommand{\fffd }{{=_{\fff}}{\downarrow}}
+\newcommand{\fffu }{{=_{\fff}}{\uparrow}}
+\newcommand{\tttd }{{=_{\ttt}}{\downarrow}}
+\newcommand{\tttu }{{=_{\ttt}}{\uparrow}}
+\newcommand{\tttord }{{=_{\ttt\vee}}{\downarrow}}
+\newcommand{\fffandd }{{=_{\fff\wedge}}{\downarrow}}
+\newcommand{\tttoru }{{=_{\ttt\vee}}{\uparrow}}
+\newcommand{\fffandu }{{=_{\fff\wedge}}{\uparrow}}
 
-
-\newcommand{\SKS}{\mathsf{SKS}}
 
 \begin{definition}\label{definition:SKS}
 System $\SKS$ is defined by the following \emph{structural} inference rules:
